--- a/src/res/locales/app.ar-SA.po
+++ b/src/res/locales/app.ar-SA.po
@@ -1,86 +1,86 @@
 #: Close
 msgid "close"
-msgstr "Mbylle"
+msgstr "اغلاق"
 
 #: Connect
 msgid "connect"
-msgstr "Lidhu"
+msgstr "اتصال"
 
 #: Connecting...
 msgid "connecting"
-msgstr "Duke u lidhur"
+msgstr "جارى الاتصال..."
 
 #: Connected
 msgid "connected"
-msgstr "I lidhur"
+msgstr "تم الاتصال"
 
 #: Settings
 msgid "settings"
-msgstr "Veglat"
+msgstr "الاعدادات"
 
 #: Channels
 msgid "channels"
-msgstr ""
+msgstr "كل الغرف"
 
 #: Banned
 msgid "banned"
-msgstr "I perjashtuar"
+msgstr "قائمة المنع"
 
 #: Notifications
 msgid "notifications"
-msgstr "Njoftimet"
+msgstr "الاشعارات"
 
 #: Username
 msgid "username"
-msgstr "Perdoruesi"
+msgstr "اسم المستخدم"
 
 #: Password
 msgid "password"
-msgstr "Passwordi"
+msgstr "الرقم السرى"
 
 #: I have a password
 msgid "password_have"
-msgstr "Kam nje password"
+msgstr "هل لديك كلمة سر"
 
 #: Server
 msgid "server"
-msgstr "Serveri"
+msgstr "خادم"
 
 #: Nick (Nickname)
 msgid "nick"
-msgstr "Pseudonimi"
+msgstr "اسم"
 
 #: Channel
 msgid "channel"
-msgstr "Kanali"
+msgstr "الغرفة"
 
 #: Network
 msgid "network"
-msgstr "Rrjeti"
+msgstr "الشبكة"
 
 #: ZNC
 msgid "znc"
-msgstr "ZNC"
+msgstr "شل"
 
 #: Logging in...
 msgid "logging_in"
-msgstr "I loguar"
+msgstr "تسجيل الدخول ..."
 
 #: Invalid login
 msgid "invalid_login"
-msgstr "Error ne login"
+msgstr "خطا الدخول"
 
 #: Search...
 msgid "do_search"
-msgstr ""
+msgstr "بحث..."
 
 #: OK
 msgid "ok"
-msgstr ""
+msgstr "موافق"
 
 #: Cancel
 msgid "cancel"
-msgstr ""
+msgstr "الغاء"
 
 #: This will close all KiwiIRC conversations. Are you sure you want to close this window?
 msgid "window_unload"
@@ -88,444 +88,444 @@ msgstr ""
 
 #: Realname field in a users whois
 msgid "whois_realname"
-msgstr "Emri real"
+msgstr "الهوية"
 
 #: Away status in a users whois
 msgid "whois_status"
-msgstr "Statusi"
+msgstr "الحالة"
 
 #: Away status in a users whois
 msgid "whois_status_available"
-msgstr "Eshte ne linje"
+msgstr "متاح"
 
 #: Send user a message button
 msgid "send_a_message"
-msgstr "Dergo nje mesazh"
+msgstr "إرسال رسالة"
 
 #: Show more information
 msgid "more_information"
-msgstr "Me shum informacion"
+msgstr "المزيد من المعلومات"
 
 #: Ignore user toggle box
 msgid "ignore_user"
-msgstr "Injoroje"
+msgstr "تجاهل مستخدم"
 
 #: Channel input box
 msgid "connection_channel"
-msgstr "Lidhja ne kanal"
+msgstr "غرفة"
 
 #: General Title
 msgid "settings_general"
-msgstr "Veglat gjenerale"
+msgstr "عام"
 
 #: Theme Title
 msgid "settings_theme"
-msgstr "Tema"
+msgstr "الثيم"
 
 #: Theme URL
 msgid "settings_themeurl"
-msgstr "Url e temes"
+msgstr "رابط الثيم"
 
 #: Use Monospace
 msgid "settings_use_monospace"
-msgstr "Perdor monospace"
+msgstr "اعدادات المساحه"
 
 #: Traditional IRC layout
 msgid "settings_layout_compact"
-msgstr ""
+msgstr "صورة الاسم"
 
 #: Show autocomplete list
 msgid "settings_show_autocomplete"
-msgstr "Shiko ndihmuesin"
+msgstr "إظهار قائمة الاكمال التلقائى"
 
 #: Messages Title
 msgid "settings_messages_title"
-msgstr "Titulli mesazhit"
+msgstr "رسائل المحادثة"
 
 #: Show timestamps
 msgid "settings_timestamps"
-msgstr "Ora"
+msgstr "إظهار الطوابع الزمنيه"
 
 #: Use 24-hour timestamps
 msgid "settings_24hour_timestamps"
-msgstr "Ora format 24"
+msgstr "إستخدام 24 ساعة فى الطوابع الزمنيه"
 
 #: Show emoticons
 msgid "settings_emoticons"
-msgstr "Figurat"
+msgstr "إظهار الايموشنات"
 
 #: Block new Private messages
 msgid "settings_block_private"
-msgstr "Bloko privatin"
+msgstr "حظر الرسائل الخاضة الجديدة"
 
 #: Messages in scrollback
 msgid "settings_scrollback"
-msgstr "Shfleto"
+msgstr "الرسائل فى شريط التنقل للخلف"
 
 #: Extra formatting
 msgid "settings_formatting"
-msgstr "Formati"
+msgstr "تنسيق إضافي"
 
 #: Include join/part messages as activity
 msgid "settings_show_joinpart"
-msgstr "Shiko hyrje daljet"
+msgstr "تضمين رسائل الانضمام / المغادرة كنشاط"
 
 #: Mute sound notifications
 msgid "settings_mute_sound"
-msgstr "Hiq zilet"
+msgstr "كتم الصوت الإخطارات"
 
 #: Highlight on words
 msgid "settings_highlight"
-msgstr "Citimet"
+msgstr "تسليط الضوء على الكلمات (مساحة منفصلة)"
 
 #: Aliases Title
 msgid "settings_aliases"
-msgstr "Shkurtimet"
+msgstr "اوامر"
 
 #: Send Message
 msgid "send_message"
-msgstr "Dergo mesazhin"
+msgstr "إرسال رسالة"
 
 #: Notify me when
 msgid "settings_notify"
-msgstr "Me njofto kur"
+msgstr "نبهنى عند"
 
 #: All messages
 msgid "settings_notify_all"
-msgstr "Me njofto per te gjitha"
+msgstr "جميع الرسائل"
 
 #: I am mentioned
 msgid "settings_notify_mentioned"
-msgstr "Kur permendem"
+msgstr "تم ذكرى"
 
 #: Never
 msgid "settings_notify_never"
-msgstr "Mos me njofto"
+msgstr "أبدا"
 
 #: Mute sounds
 msgid "settings_notify_mute"
-msgstr "Hiq zilet"
+msgstr "كتم الأصوات"
 
 #: operator_tools
 msgid "operator_tools"
-msgstr ""
+msgstr "أدوات المشغل"
 
 #: settings_default_ban_mask
 msgid "settings_default_ban_mask"
-msgstr ""
+msgstr "قناع الحظر الافتراضي"
 
 #: settings_default_kick_reason
 msgid "settings_default_kick_reason"
-msgstr ""
+msgstr "سبب الطرد الافتراضى"
 
 #: Refresh banlist
 msgid "bans_refresh"
-msgstr "Rifresko ban-et"
+msgstr "تحديث قائمة الحظر"
 
 #: Banned user
 msgid "bans_user"
-msgstr "User ne ban"
+msgstr "شخص ممنوع"
 
 #: Banned by
 msgid "bans_by"
-msgstr "Ban nga"
+msgstr "منع بواسطه"
 
 #: Refreshing banlist
 msgid "bans_refreshing"
-msgstr "Duke rifreskuar listen e ban"
+msgstr "تحديث  قائمة المنع"
 
 #: Nobody is banned
 msgid "bans_nobody"
-msgstr "Asnjeri nuk eshte ne ban"
+msgstr "لا يوجد اى شخص ممنوع!"
 
 #: Topic
 msgid "channel_topic"
-msgstr "Topiku"
+msgstr "توبيك"
 
 #: Moderated chat
 msgid "channel_moderated"
-msgstr "Chat i moderuar"
+msgstr "مود الشات"
 
 #: Invite Only
 msgid "channel_invite"
-msgstr "Vetem me ftesa"
+msgstr "للمدعوين فقط"
 
 #: Moderated topic
 msgid "channel_moderated_topic"
-msgstr "Topik i moderuar"
+msgstr "الادارة فقط من تستطيع تغيير التوبيك"
 
 #: Block external messages
 msgid "channel_external"
-msgstr "Blloko mesazhet nga jasht"
+msgstr "منع الرسائل من خارج هذه الغرفة"
 
 #: Welcome to Kiwi IRC!
 msgid "container_welcome"
-msgstr "Miresevjen ne Kiwi IRC"
+msgstr "مرحبا بكم في البال تل!"
 
 #: Show statebrowser
 msgid "container_statebrowser"
-msgstr "Shiko statusin e browserit"
+msgstr "اظهار متصفح الشات"
 
 #: Join Channel
 msgid "container_join"
-msgstr "Hyr ne kanal"
+msgstr "دخول غرفة"
 
 #: Not connected
 msgid "container_notconnected"
-msgstr "Nuk je i lidhur"
+msgstr "غير متصل"
 
 #: Private conversation with
 msgid "container_privmsg"
-msgstr "Bisede private me"
+msgstr "محادثة خاصة مع {{user}}"
 
 #: input wrap placeholder
 msgid "input_placeholder"
-msgstr "Vendi i vendosjes se te dhenave"
+msgstr "ارسل رسالة..."
 
 #: Loading
 msgid "media_loading"
-msgstr "Duke u hapur"
+msgstr "تحميل {{url}}..."
 
 #: Load previous
 msgid "messages_load"
-msgstr "Shfleto te vjetra"
+msgstr "تحميل الرسائل السابقة"
 
 #: Unread Messages
 msgid "unread_messages"
-msgstr ""
+msgstr "رسائل غير مقروءة"
 
 #: NetworkSettings $t('settings_')
 msgid "settings_server_details"
-msgstr "Veglat e rrjetit"
+msgstr "معلومات البال تل"
 
 #: Port
 msgid "settings_port"
-msgstr "Porta"
+msgstr "منفذ"
 
 #: Other networks on this ZNC account
 msgid "settings_znc_other"
-msgstr "Rrjete te tjera ne kte llogari ZNC"
+msgstr "سيتم سرد الشبكات الأخرى على حساب شل هذا في قائمة الشبكة"
 
 #: Your details
 msgid "settings_your_details"
-msgstr "Detajet tua"
+msgstr "تفاصيلك"
 
 #: Nickname
 msgid "settings_nickname"
-msgstr "Pseudonimi"
+msgstr "الاسم"
 
 #: Advanced
 msgid "settings_advanced"
-msgstr "Me shume"
+msgstr "المتقدمة"
 
 #: Encoding
 msgid "settings_encoding"
-msgstr "Kodimi"
+msgstr "الترميز"
 
 #: Show Raw
 msgid "settings_show_raw"
-msgstr "Shiko Raw"
+msgstr "إظهار الخام"
 
 #: Run commands when connected
 msgid "settings_autorun"
-msgstr "Bej komandat kur tjesh i lidhur"
+msgstr "تشغيل الأوامر عند الاتصال"
 
 #: Danger zone
 msgid "settings_danger"
-msgstr "Zone e rrezikshme"
+msgstr "منطقة الخطر"
 
 #: Remove network
 msgid "settings_remove"
-msgstr "Hiqe rrjetin"
+msgstr "حذف الشبكه"
 
 #: Person key
 msgid "person"
-msgstr "Celsi i personit"
+msgstr "{{count}} شخص هنا"
 
 #: Person plural key
 msgid "person_plural"
-msgstr "Celsi plural i personit"
+msgstr "{{count}} أشخاص هنا"
 
 #: Reconnect Channel
 msgid "reconnect_channel"
-msgstr "Rilidhu ne kanal"
+msgstr "اعادة دخول {{channel}}"
 
 #: Reconnect to network
 msgid "reconnect_network"
-msgstr "Rilidhu ne rrjet"
+msgstr "إعادة الاتصال بـ {{network}} لبدء المحادثة"
 
 #: Reconnect to query
 msgid "reconnect_query"
-msgstr "Rilidhu ne bisede"
+msgstr "إعادة الاتصال لمتابعة الحديث مع {{user}}"
 
 #: Connection settings
 msgid "reconnect_settings"
-msgstr "Veglat e lidhjes"
+msgstr "إعدادات الإتصال"
 
 #: Close options $t('side_')
 msgid "side_close"
-msgstr "Mbyll Opsionet"
+msgstr "إغلاق الخيارات"
 
 #: Channel options
 msgid "side_options"
-msgstr "Opsionet e kanalit"
+msgstr "خيارات الغرفة"
 
 #: Your settings
 msgid "side_settings"
-msgstr "Veglat e mia"
+msgstr "إعداداتك"
 
 #: Show when people join
 msgid "side_joins"
-msgstr "Shiko kur hyjne njerezit"
+msgstr "عرض عندما ينضم الأشخاص"
 
 #: Extra message formatting
 msgid "side_formatting"
-msgstr "Formati i mesazheve ekstra"
+msgstr "تنسيق رسالة إضافية"
 
 #: Nick colours in the list"
 msgid "side_colours"
-msgstr "Pseudonimet me ngjyra ne liste"
+msgstr "اسم الالوان فى القائمه"
 
 #: No buffer set
 msgid "side_buffer"
-msgstr "Asnje Amortizim i vendosur"
+msgstr "لا مجموعة عازلة"
 
 #: Error starting
 msgid "error_starting"
-msgstr "Error duke filluar"
+msgstr "يوجد خطأ فى البال تل :("
 
 msgid "error_installed"
-msgstr "Ky tekst nuk ka asnje info. Teksti esht perdorur ne application.po. pozicioni ne file: 90"
+msgstr "تأكد من تثبيت الكيوي اى ار سى بشكل صحيح و الاعدادات يمكن تحميلها"
 
 #: Leave
 msgid "state_leave"
-msgstr "Largohu"
+msgstr "مغادرة {{name}}"
 
 #: Your account
 msgid "state_account"
-msgstr "Llogaria jote"
+msgstr "الحساب الخاص بك"
 
 #: Your settings and networks will be remembered on this computer
 msgid "state_remembered"
-msgstr "Veglat dhe rrjeti do ruhen ne kete kompjuter"
+msgstr "سيتم تذكر الإعدادات والشبكات على هذا الكمبيوتر."
 
 #: Forget me
 msgid "state_forget"
-msgstr "Me harro"
+msgstr "انسانى"
 
 #: No networks here yet.
 msgid "state_network"
-msgstr "Asnje rrjet ketu"
+msgstr "لا توجد شبكات هنا حتى الآن."
 
 #: Add one?
 msgid "state_add"
-msgstr "Shto nje?"
+msgstr "أضف واحدا؟"
 
 #: Available networks
 msgid "state_available"
-msgstr "Rrjetet ne dispozicion"
+msgstr "الشبكات المتاحة"
 
 #: Configure network
 msgid "state_configure"
-msgstr "Konfiguro rrjetin"
+msgstr "تكوين الشبكة"
 
 #: Not connected.
 msgid "state_disconnected"
-msgstr "Jo i lidhur"
+msgstr "غير متصل."
 
 #: Join new #channel
 msgid "state_join"
-msgstr "Hyr ne nje #kanal"
+msgstr "انضم إلى غرفة جديدة"
 
 #: Change nick
 msgid "change_nick"
-msgstr ""
+msgstr "تغيير الاسم"
 
 #: Account name
 msgid "user_account"
-msgstr "Emri llogarise"
+msgstr "أسم الحساب: {{user}}"
 
 #: Real name
 msgid "user_realname"
-msgstr "Emri real"
+msgstr "الاسم الحقيقي: {{realname}}"
 
 #: Is a bot
 msgid "user_bot"
-msgstr "Esht rrobot"
+msgstr "هو بوت"
 
 #: Is available for help
 msgid "user_help"
-msgstr "Esht i gatshem tju ndihmoje"
+msgstr "متاح للمساعدة"
 
 #: Is an operator
 msgid "user_op"
-msgstr "Esht aop"
+msgstr "هو المشغل"
 
 #: Connected to
 msgid "user_server"
-msgstr "Esht i lidhur ne"
+msgstr "متصل بـ {{server}} {{info}}"
 
 #: Securely connected via SSL/TLS
 msgid "user_secure"
-msgstr "Perdor nje lidhje te sigurte"
+msgstr "اتصال آمن عبر SSL/TLS"
 
 #: Also in channels
 msgid "user_channels"
-msgstr "Esht ne kanalet"
+msgstr "أيضا في الغرف {{channels}}"
 
 #: Access level
 msgid "user_access"
-msgstr "Ka akses level"
+msgstr "مستوى الوصول"
 
 #: Normal
 msgid "user_normal"
-msgstr "Esht user normal"
+msgstr "عادي"
 
 #: Kick from channel
 msgid "user_kick"
-msgstr "Beji kick ne kanal"
+msgstr "طرد من الغرفة"
 
 #: Ban from the channel
 msgid "user_ban"
-msgstr "Shtoje ne ban liste"
+msgstr "منع من الغرفة"
 
 #: Kick + Ban from the channel
 msgid "user_kickban"
-msgstr "Beji kickban nga kanali"
+msgstr "منع وطرد من الغرفة"
 
 #: Your IRC client
 msgid "personal_client"
-msgstr "Shfletuesi juaj i Irc"
+msgstr "عميل أى أر سى الخاص بك.\n"
 
 #: Add your networks. Join your channels.
 msgid "personal_addjoin"
-msgstr "Shto rrjetin tend. hyr ne kanalet tua"
+msgstr "أضف شبكاتك. انضم إلى غرفك."
 
 #: They will be here when you come back.
 msgid "personal_return"
-msgstr "Ato do jene ketu kur ti te vish serisht"
+msgstr "سيكونو هنا عندما تعود."
 
 #: Add a Network
 msgid "personal_add"
-msgstr "Shto rrjet"
+msgstr "إضافة شبكة"
 
 #: Saved networks
 msgid "personal_saved"
-msgstr "Rrjetet e ruajtura"
+msgstr "الشبكات المحفوظة"
 
 #: Kiwi IRC (next gen) - Rizon preview
 msgid "rizon_title"
-msgstr "Kiwi IRC (Gjenerata e re) - Parashikim Rizon"
+msgstr "الكيوي ار سى (الجيل القادم) - معاينة ريزون"
 
 #: Direct websockets. No Kiwi server or webirc involved.
 msgid "rizon_websockets"
-msgstr "Lidhje direkte websockets. Ska Kiwi server ose webirc te perfshire"
+msgstr "الويب سوكيت المباشر.لايوجد خادم كيوي او اى ار سى الويب."
 
 #: (Thanks to Adam @Rizon for the development websocket server support!)
 msgid "rizon_thanks"
-msgstr "Faleminderit Adam @Rizon per krijimin e websocket server"
+msgstr "(الشكرلـ آدم رايزون لتطوير دعم خادم ويب سوكيت!)\n"
 
 #: Give the developer version of Kiwi IRC a try!
 msgid "rizon_dev"
-msgstr "Beje prove versionin per zhvillues"
+msgstr "تجربة نسخة المطور من الكيوي اى ار سى!"
 
