--- a/src/res/locales/app.en-US.po
+++ b/src/res/locales/app.en-US.po
@@ -18,6 +18,10 @@ msgstr "Connected"
 msgid "settings"
 msgstr "Settings"
 
+#: Channels
+msgid "channels"
+msgstr "Channels"
+
 #: Banned
 msgid "banned"
 msgstr "Banned Users"
@@ -66,6 +70,22 @@ msgstr "Logging in..."
 msgid "invalid_login"
 msgstr "Invalid login"
 
+#: Search...
+msgid "do_search"
+msgstr "Search..."
+
+#: OK
+msgid "ok"
+msgstr "OK"
+
+#: Cancel
+msgid "cancel"
+msgstr "Cancel"
+
+#: This will close all KiwiIRC conversations. Are you sure you want to close this window?
+msgid "window_unload"
+msgstr "This will close all KiwiIRC conversations. Are you sure you want to close this window?"
+
 #: Realname field in a users whois
 msgid "whois_realname"
 msgstr "Real name"
@@ -110,6 +130,10 @@ msgstr "Theme URL"
 msgid "settings_use_monospace"
 msgstr "Use monospace"
 
+#: Traditional IRC layout
+msgid "settings_layout_compact"
+msgstr "Traditional IRC layout"
+
 #: Show autocomplete list
 msgid "settings_show_autocomplete"
 msgstr "Show autocomplete list"
@@ -152,7 +176,7 @@ msgstr "Mute sound notifications"
 
 #: Highlight on words
 msgid "settings_highlight"
-msgstr "Highlight on words (space seperated)"
+msgstr "Highlight on words (space separated)"
 
 #: Aliases Title
 msgid "settings_aliases"
@@ -412,6 +436,10 @@ msgstr "Not connected."
 #: Join new #channel
 msgid "state_join"
 msgstr "Join new #channel"
+
+#: Change nick
+msgid "change_nick"
+msgstr "Change nick"
 
 #: Account name
 msgid "user_account"
